2006-06-27 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/ogle_parsemail.pl: Added meta.ref.url to the photometry data
	
2006-06-27 Alasdiar Allan <aa@astro.ex.ac.uk>

        * www/*: Added server side components from estar2 and estar3's
          web servers. Located in /var/www/html on those servers, these
          components do networks status and manual submission of events
          and observations.

2006-06-21 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/gcn_vo_server.pl: Skeleton GCN -> VOEvent translator
	
2006-06-20 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/make_observation.pl: Added support for submission of 'toop'
	  type observations.
	  
	* bin/user_agent.pl: Added support for submission of 'toop' type
	  obsverations to support the PLANET Manual Override page, see
	  http://vo.astro.ex.ac.uk/robonet-1.0/cgi-bin/index.cgi
	    
2006-06-13 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Fixed message parsing for IAMALIVE and ACK
	  responses. I've got deja vu, I thought I'd done that already!?


2006-06-12 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/ogle_client.pl: Added an event client which listens for OGLE
	  event messages and then submits 3x30s observations onto Robonet-1.0
	  for an initial "first look".
	  
	* bin/event_broker.pl: Finally fixe alarm clock errors for good, and
	  added semaphoring from the IAMALIVE thread to the event handling
	  thread that the remote client is not responding to messages.  
	  
2006-06-07 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl & eSTAR/Broker/Handler.pm: Moved to using
	  <Transport> rather than <VOEvent> XML for acks and iamalives,
	  still echo iamalives from upstream. Also moved to using VOEvent
	  module to build these messages for none RAPTOR or eSTAR hosts,
	  using the new XML::Document::Transport class to build the 
	  <Transport> messages.
	  
2006-06-06 Aladair Allan <aa@astro.ex.ac.uk>

	* Moved services off the dying estar.astro.ex.ac.uk machine
