@@ -1,6 +1,8 @@
-2006-06-27 Alasdiar Allan <aa@astro.ex.ac.uk>
+2006-06-29 Alasdiar Allan <aa@astro.ex.ac.uk>
 
 	* bin/ogle_parsemail.pl: Added meta.ref.url to the photometry data
+
+        * www/*: Moved modifications into CVS from the live site on estar3.
 	
 2006-06-27 Alasdiar Allan <aa@astro.ex.ac.uk>
 
